--- a/index.html
+++ b/index.html
@@ -566,7 +566,7 @@
         
                 <div class="footer-middle__support">
                     <p>
-                        Tổng đài hỗ trợ: 08.5353.2288</br>Email: phamtienquan92@gmail.com
+                        Tổng đài hỗ trợ: 08.5353.2288</br>Email: lucthienphong1120@gmail.com
                     </p>
                     <div class="footer-middle__support-img">
                         <a href="">
